[tool.poetry]
name = "ncps"
version = "0.1.0"
description = ""
authors = ["leonid <leonid@tigera.io>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.4"
tensorflow = "^2.11.0"
torch = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
